2004-11-01  Matthias Clasen  <mclasen@redhat.com>

	* gdk-pixbuf-features.h.in: Break the declaration of the three 
	version variables, so that gtk-doc can grok it.

2004-10-29  Hans Breuer  <hans@breuer.org>

	* makefile.msc : updated

2004-10-27  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.5.4 ===

2004-10-27  Matthias Clasen  <mclasen@redhat.com>

	* Makefile.am (gdk-pixbuf-alias.h): Fix srcdir != builddir
	builds.

2004-09-19  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.5.3 ===

2004-09-15  Matthias Clasen  <mclasen@redhat.com>

	* io-ico.c: 
	* io-xpm.c: Fix some security issues discovered by Chris Evans. 

Mon Sep 13 19:31:34 2004  Matthias Clasen  <maclas@gmx.de>

	* io-jpeg.c (real_save_jpeg): Drop the alpha channel 
	when saving 4-channel pixbufs.  (#152450, Emmanuel Pacaud)

2004-09-09  Matthias Clasen  <mclasen@redhat.com>

	* makegdkpixbufalias.pl: Use the short prefix "IA__" for 
	aliases instead of the long suffix "__internal_alias". 
	
2004-09-01  Matthias Clasen  <mclasen@redhat.com>

	* gdk-pixbuf-core.h: Align argument names with source.

Thu Aug 26 01:23:16 2004  Matthias Clasen  <maclas@gmx.de>

	* gdk-pixbuf-core.h: 
	* gdk-pixbuf.symbols: 
	* gdk-pixbuf-io.c (gdk_pixbuf_new_from_file_at_scale): 
	Add gdk_pixbuf_new_from_file_at_scale(), which is just
	like gdk_pixbuf_new_from_file_at_size(), but optionally
	ignores the aspect ratio.  (#136395, Dom  Lachowicz)

Wed Aug 25 17:23:23 2004  Manish Singh  <yosh@gimp.org>

	* io-gif.c: remove unused set_need_recomposite() function.

2004-08-25  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.5.2 ===

	* abicheck.sh: Make work in make distcheck.

2004-08-25  Matthias Clasen  <mclasen@redhat.com>

	* Makefile.am: Use the same prefix when creating 
	gdk-pixbuf-marshal.c and gdk-pixbuf-marshal.h

	* gdk-pixbuf-loader.c (gdk_pixbuf_loader_class_init): _-prefix
	the marshalers.

2004-08-24  Matthias Clasen  <mclasen@redhat.com>
